--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -108,7 +108,7 @@
     <button id="cityControl" class="openPanel">城市切换</button>
     <button id="lightControl" class="openPanel">光照</button>
     <button id="multiScaleControl" class="openPanel">多尺度展示</button>
-    <button id="23D">二三维混搭</button>
+    <input type="checkbox" id="23D">二三维混搭
     <!-- <button id="cloudControl" class="openPanel">云雾</button> -->
 </div>
 
