--- a/shanghai/amap_indoor.html
+++ b/shanghai/amap_indoor.html
@@ -33,10 +33,10 @@
 	.amap-copyright {
 		display: none!important;
 	}
-	body {
+	/*body {
 		width:500px;
 		height: 300px;
-	}
+	}*/
 
 </style>
 <title>室内地图</title>
@@ -47,10 +47,10 @@
 	<script type="text/javascript" src="https://webapi.amap.com/demos/js/liteToolbar.js"></script>
 	<script type="text/javascript">
 		var map = new AMap.Map('mapDiv', {
-			resizeEnable: false,
-			dragEnable:false,
-			zoomEnable:false,
-			doubleClickZoom:false,
+			// resizeEnable: false,
+			// dragEnable:false,
+			// zoomEnable:false,
+			// doubleClickZoom:false,
 			center:[114.356513,30.52639],
 			zoom:18
 		});
