实现了上海三个层次混搭

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -172,13 +172,12 @@
 
 <div id="multiScaleControlPanel" class="controlPanel panel">
     <button id="startMultiScale">开始</button>
-    <form id="lodMethod">
+    <!-- <form id="lodMethod">
     <input type="radio" name="lodMethod" value="distance">根据距离&nbsp;
     <input type="radio" name="lodMethod" value="way" checked>当前方向&nbsp;
-    <!-- <input type="radio" name="lodMethod" value="road" disabled="true">当前道路 -->
-    </form> 
+    <input type="radio" name="lodMethod" value="road" disabled="true">当前道路
+    </form>  -->
 </div>
-<div id="loadingMessage" style="display: none;">正在传输数据，请稍等...</div>
 
 <!-- <div id="cloudControlPanel" class="controlPanel panel">
     <p>这部分待集成进来</p>
