--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -172,6 +172,8 @@
 
 <div id="multiScaleControlPanel" class="controlPanel panel">
     <button id="startMultiScale">开始</button>
+    <input type="checkbox" id="multiScaleBorder" checked><label for="multiScaleBorder">分界线</label>
+    <p id="multiScaleLayers" style="display: none"></p>
     <!-- <form id="lodMethod">
     <input type="radio" name="lodMethod" value="distance">根据距离&nbsp;
     <input type="radio" name="lodMethod" value="way" checked>当前方向&nbsp;
