--- a/cloud/index.html
+++ b/cloud/index.html
@@ -22,16 +22,29 @@
         font-family: 'Open Sans', sans-serif;
         z-index: 1001
     }
+    #cloudPosition button{
+        width:20px;
+        height: 20px;
+        padding: 0;
+    }
 </style>
 
 <div id='map'></div>
 <div id='menu'>
     <input type="checkbox" id="cloudToggle"><label for="cloudControl">云</label>
     <form id="cloudPara">
-        黑<span id="cloud-color"></span><input type="range" name="color" min="0" max="255" value="255">白<br />
-        小<span id="cloud-size"></span><input type="range" name="size" min="20" max="200" value="100">大<br />
+        黑<input type="range" name="color" min="0" max="255" value="255">白<br />
+        小<input type="range" name="size" min="20" max="200" value="100">大<br />
         <!-- <label>浓度:<br /><span id="cloud-density"></span><input type="range" name="density" min="5" max="15" value="10"></label><br /> -->
     </form>
+    <div id="cloudPosition">
+        慢<input id="cloud-speed" type="range" name="speed" min="0" max="10" value="1">快<br />
+        方向&nbsp;<input type="number" id="cloud-direction" min="0" max="360" value="45" style="width: 40px;"><br />
+        <div id="cloud-position-control">
+            <button id="cloud-north" style="margin-left: 20px;">↑</button><button id="cloud-up" style="margin-left: 20px;">↑</button><br />
+            <button id="cloud-west">←</button><button id="cloud-south">↓</button><button id="cloud-east">→</button><button id="cloud-down">↓</button>
+        </div>        
+    </div>
     <p id="xixi">zoom:xxx;     layer:xxx;</p>
 </div>
 <script id="vs" type="x-shader/x-vertex">
@@ -142,6 +155,8 @@
         normalDistribution[i]=getNumberInNormalDistribution(0,1);
         randomDistribution[i]=Math.random();
     }
+    var speedFactor=document.getElementById("cloud-speed").value/10000;
+    var cloudDirection=document.getElementById("cloud-direction").value;
 
     document.getElementById("cloudToggle").addEventListener("change",function(){
         if (this.checked){
@@ -158,8 +173,8 @@
 
             function animate() {
                 requestAnimationFrame( animate );
-                cloudPosition[0]+=0.00001;
-                cloudPosition[1]+=0.00001;
+                cloudPosition[0]+=speedFactor*Math.cos(2 * Math.PI / 360 * cloudDirection);
+                cloudPosition[1]+=speedFactor*Math.sin(2 * Math.PI / 360 * cloudDirection);
                 threebox.moveToCoordinate(cloudMesh, cloudPosition, {scaleToLatitude: true, preScale: 2});
             }
             animate();
@@ -168,8 +183,42 @@
         }
     });
 
-    document.getElementById("cloudPara").addEventListener('change', updateCloud);
+    document.getElementById("cloud-speed").addEventListener("change",function(e){
+        speedFactor=e.target.value/10000;
+    });
 
+    document.getElementById("cloud-direction").addEventListener("change",function(){
+        cloudDirection=this.value;
+    });
+
+    document.getElementById("cloud-position-control").addEventListener("click",function(e){
+        const coordinateOffset=0.01;//每次移动多少
+        const heightOffset=100;
+        switch (e.target.id){
+            case "cloud-north":
+                cloudPosition[1]+=coordinateOffset;
+                break;
+            case "cloud-west":
+                cloudPosition[0]-=coordinateOffset;
+                break;
+            case "cloud-east":
+                cloudPosition[0]+=coordinateOffset;
+                break;
+            case "cloud-south":
+                cloudPosition[1]-=coordinateOffset;
+                break;
+            case "cloud-up":
+                cloudPosition[2]+=heightOffset;
+                break;
+            case "cloud-down":
+                cloudPosition[2]-=heightOffset;
+                break;
+            default:
+                break;
+        }
+    });
+
+    document.getElementById("cloudPara").addEventListener('change', updateCloud);
     function updateCloud() { 
         var inputs = document.getElementById("cloudPara").getElementsByTagName('input');
         var para = {};
