--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -113,12 +113,11 @@
         慢<input id="cloud-speed" type="range" name="speed" min="0" max="10" value="1">快<br />
         方向&nbsp;<input type="number" id="cloud-direction" min="0" max="360" value="45" style="width: 40px;"><br />
         <div id="cloud-position-control">
-            <button id="cloud-north" style="margin-left: 20px;">↑</button><button id="cloud-up" style="margin-left: 20px;">↑</button><br />
-            <button id="cloud-west">←</button><button id="cloud-south">↓</button><button id="cloud-east">→</button><button id="cloud-down">↓</button>
+            <button id="cloud-north" style="margin-left: 20px;">△</button><button id="cloud-up" style="margin-left: 20px;">△</button><br />
+            <button id="cloud-west">◁</button><button id="cloud-south">▽</button><button id="cloud-east">▷</button><button id="cloud-down">▽</button>
         </div>        
     </div>
 </div>
-
 <!-- 云 -->
 <script id="vs" type="x-shader/x-vertex">
     varying vec2 vUv;
