修改indoor3d一些源码

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -2,21 +2,34 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>上海-调参综合</title>
+    <title>多模态混搭</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <!-- mapbox -->
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.49.0/mapbox-gl.css' rel='stylesheet' />
+    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v0.10.0/mapbox-gl-language.js'></script>
+    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
+    <!-- 光照控制 -->
     <script type="text/javascript" src="https://www.mapbox.com/bites/00295/globe.js"></script>
     <script type="text/javascript" src="https://www.mapbox.com/bites/00295/colorpicker.js"></script>
     <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-language/v0.10.0/mapbox-gl-language.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/@turf/turf@5/turf.min.js"></script>
-    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="./js/threebox.js" type="text/javascript"></script>
-    <link href="./css/style.css" rel="stylesheet" />
-    <script src="config.js"></script>
+    <!-- 室内地图 -->
+    <script src="./lib/threebox.js"></script><!-- 云 -->
+    <script src="./lib/Detector.js"></script>
+    <script src="./lib/OrbitControls.js"></script>
+    <script src="./lib/IndoorMap.js"></script>
+    <script src="./lib/Projector.js"></script>
+    <script src="./lib/stats.min.js"></script>
+    <script src="./lib/IndoorMap2d.js"></script>
+    <script src="./lib/IndoorMap3d.js"></script>
+    <script src="./lib/Theme.js"></script>
+    <link href="./lib/indoor3D.css" rel="stylesheet">
+    <!-- 其他 -->
+    <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>    
+    <link href="./css/style.css" rel="stylesheet" />    
 </head>
 <body>
+<div id="indoor3d"></div>
 <div id='map'></div>
 
 <div id='menu' class="panel">
@@ -27,11 +40,12 @@
     <input type="checkbox" id="landuse"><label for="landuse">土地利用数据</label>
     <br />
     <button id="load-trips">加载轨迹</button>
+    <button id="indoorMap">室内地图</button>
     <button id="cityControl" class="openPanel">城市切换</button>
     <button id="lightControl" class="openPanel">光照</button>
     <button id="multiScaleControl" class="openPanel">多尺度展示</button>
-    <!-- <button id="baselayerControl" class="openPanel">底图切换</button><br/> -->
     <button id="cloudControl" class="openPanel">云</button>
+    <!-- <button id="baselayerControl" class="openPanel">底图切换</button><br/> -->
 </div>
 
 <div id='trips' class='trips' >
@@ -147,7 +161,7 @@
         gl_FragColor = mix( gl_FragColor, vec4( fogColor, gl_FragColor.w ), fogFactor );
     }
 </script>
-
+<script src="config.js"></script>
 <script src="./js/init.js"></script>
 <script src="./js/environment.js"></script>
 <script src="./js/animate.js"></script>
