修改为点击进入室内

--- a/shanghai/index.html
+++ b/shanghai/index.html
@@ -29,7 +29,7 @@
     <link href="./css/style.css" rel="stylesheet" />    
 </head>
 <body>
-<div id="indoor3d"></div>
+<!-- <div id="indoor3d"></div> -->
 <div id='map'></div>
 
 <div id='menu' class="panel">
@@ -40,7 +40,7 @@
     <input type="checkbox" id="landuse"><label for="landuse">土地利用数据</label>
     <br />
     <button id="load-trips">加载轨迹</button>
-    <button id="indoorMap">室内地图</button>
+    <!-- <button id="indoorMap">室内地图</button> -->
     <button id="cityControl" class="openPanel">城市切换</button>
     <button id="lightControl" class="openPanel">光照</button>
     <button id="multiScaleControl" class="openPanel">多尺度展示</button>
