--- a/indoor3D/index.html
+++ b/indoor3D/index.html
@@ -19,7 +19,8 @@
 <link href="css/indoor3D.css" rel="stylesheet">
 <script src="js/loaders/DDSLoader.js"></script>
 <script src="js/loaders/MTLLoader.js"></script>
-<script src="js/loaders/OBJLoader.js"></script>
+<script src="js/loaders/OBJMTLLoader.js"></script>
+<script src="js/loaders/shader.js"></script>
 <script src="js/init.js"></script>
 </body>
 </html>
