实现了叠加建筑到mapbox里能抽出还没做交互按钮

--- a/indoor3D/index.html
+++ b/indoor3D/index.html
@@ -8,8 +8,8 @@
 <body>
 <!-- <button id="test" style="position:absolute;top:5px;left:5px;z-index:1001">测试按钮</button> -->
 <button id="popularity" style="position:absolute;top:5px;left:5px;z-index:1001">人气</button>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.min.js"></script> -->
-<script src="js/three.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/94/three.js"></script>
+<!-- <script src="js/three.min.js"></script> -->
 <script src="js/Detector.js"></script>
 <script src="js/OrbitControls.js"></script>
 <script src="js/IndoorMap.js"></script>
@@ -19,9 +19,9 @@
 <script src="js/IndoorMap3d.js"></script>
 <script src="js/Theme.js"></script>
 <link href="css/indoor3D.css" rel="stylesheet">
-<script src="js/loaders/DDSLoader.js"></script>
+<!-- <script src="js/loaders/DDSLoader.js"></script>
 <script src="js/loaders/MTLLoader.js"></script>
-<script src="js/loaders/OBJMTLLoader.js"></script>
+<script src="js/loaders/OBJMTLLoader.js"></script> -->
 <script src="js/loaders/shader.js"></script>
 <script src="js/init.js"></script>
 </body>
